Progress pie chart now also visible in the sidebar. Fixed issue where clicking on an action buttons svg icon would result in unexpected behaviour when creating a new task.

--- a/src/index.scss
+++ b/src/index.scss
@@ -174,6 +174,7 @@ code {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
+                width: 100%;
                 .text {
                 }
                 .chevron {
@@ -197,9 +198,11 @@ code {
           &.droppable {
             border: 2px solid $primary-blue;
           }
+          display: flex;
+          align-items: center;
           &.item {
             svg {
-              width: 25px;
+              // width: 25px;
               font-size: 1.1em;
               color: $primary-gray;
               &.inbox {
@@ -544,12 +547,23 @@ code {
     &:active {
       background: rgb(60, 60, 60);
     }
+    svg {
+      pointer-events: none;
+    }
   }
 }
 
-.progress-indicator{
+.progress-indicator {
   &.small {
-
+    width: 10px;
+    height: 10px;
+    line-height: 10px;
+    border: 1px solid $primary-gray;
+    border-radius: 50%;
+    padding: 1px;
+    .CircularProgressbar-path {
+      stroke: $primary-gray;
+    }
   }
   &.large {
     width: 15px;
@@ -560,7 +574,15 @@ code {
     margin-right: 5px;
   }
 }
-.CircularProgressbar-path       { stroke: $primary-blue;  }
-.CircularProgressbar-trail      { stroke: transparent; }
-.CircularProgressbar-text       { fill: yellow; }
-.CircularProgressbar-background { fill: green;  }
+.CircularProgressbar-path {
+  stroke: $primary-blue;
+}
+.CircularProgressbar-trail {
+  stroke: transparent;
+}
+.CircularProgressbar-text {
+  fill: yellow;
+}
+.CircularProgressbar-background {
+  fill: green;
+}
